--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,9 +10,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "desenv" ]
+    branches: [ "desenv", "master" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "desenv" ]
 
 jobs:
   build:
