--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+spring.data.mongodb.database=${MONGO_DATABASE}
+spring.data.mongodb.uri= mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}${MONGO_CLUSTER}/?retryWrites=true&w=majority
+
+spring.mvc.static-path-pattern=/resources/**
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.mvc.favicon.enabled=false
+
+
+
+
+
+
